# SeaBattle

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  CMakeLists.txt  CMakePresets.json  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  LICENSE  License.rtf  NETWORK_IMPLEMENTATION.md  NETWORK_PROTOCOL_SUMMARY.md  NETWORK_PROXY_ARCHITECTURE.md  NETWORK_USAGE.md  PROTOCOL.md  README_NETWORK.md  REFACTORING_SUMMARY.md  SERVER.md  STATUS_BAR_ARCHITECTURE.md  STATUS_BAR_README.md  STATUS_BAR_VISUAL_GUIDE.md  VERSIONING.md  WIX_INSTALLER.md  conanfile.txt
.github/workflows/: nightly-build.yml
cmake/: WixFragment.wxs  version.cmake
server/: CMakeLists.txt  GameModel.cpp  GameModel.h  main.cpp
src/: ARCHITECTURE.md  ActionSourceFactory.cpp  BattleField.cpp  BattleField.h  CMakeLists.txt  ClientExample.cpp  ClientSession.h  ClientSettingsDialog.h  GameNetworkAdapter.cpp  GameNetworkAdapter.h  GameProtocol.h  GameScreen.cpp  GameScreen.h  GameServer.cpp  GameServer.h  IActionSource.h  IGameModelSource.h  IModel.h  LocalActionSource.cpp  LocalActionSource.h  LocalGameModelSource.h  MainWindow.cpp  MainWindow.h  Model.h  ModelAdapter.cpp  ModelAdapter.h  NETWORK_CLIENT_README.md  NETWORK_CLIENT_README_RU.md  NetworkActionSource.cpp  NetworkActionSource.h  NetworkAdapter.h  NetworkClient.cpp  NetworkClient.h  NetworkClientUsageExample.cpp  NetworkGameModel.h  NetworkGameModelSource.h  NetworkProxyExample.h  NetworkSession.h  Protocol.h  RemoteModel.cpp  (+11 more)
src/network/: IMessage.h  IMessageHandler.h  IMessageRouter.h  INetworkNode.h  Messages.h  ProtocolConstants.h
